sql/sql_table.cc
@@ -6314,6 +6314,7 @@ my_bool open_global_temporary_table(THD *thd, TABLE_SHARE *source,
   table->init(thd, out_table);
 
   thd->use_global_tmp_table_tp();
+  thd->lex->no_write_to_binlog= true;
   tdc_release_share(source);
   return FALSE;
 }
